# class-planner

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  agents.py  content_saver.py  database.py  event_notifier.py  main.py  models.py  security.py  template.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: input.css
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
