[project]
name = "geneacademy"
version = "0.1.0"
description = "Educational Content Generation Platform using AI agents"
readme = "README.md"
authors = [
    { name = "GeneAcademy Team", email = "team@geneacademy.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "markdown>=3.5.1",
    "reportlab>=4.0.7",
    "openai>=1.3.0",
    "langchain>=0.0.340",
    "python-docx>=0.8.11",
    "pypdf2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/geneacademy/platform"
Repository = "https://github.com/geneacademy/platform"
Issues = "https://github.com/geneacademy/platform/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]